Bag fixed in modeling. Added list_answer

--- a/yandex_hackathon_modelling_by_ds_team_4.ipynb
+++ b/yandex_hackathon_modelling_by_ds_team_4.ipynb
@@ -5325,8 +5325,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Cловарь с sku товаров\n",
-    "dict_sku = {}\n",
+    "#список со словарями отвеат\n",
+    "list_answer = []\n",
     "# перебираем кластеры по очереди\n",
     "for cluster in sorted(df_order['cluster'].unique()):\n",
     "    df_cluster = df_order[df_order['cluster']==cluster]\n",
@@ -5343,6 +5343,9 @@
     "    \n",
     "\n",
     "    while df_cluster.shape[0] != 0:\n",
+    "        #Cловарь с sku товаров\n",
+    "        dict_sku = {}\n",
+    "        \n",
     "        index_for_drop = [0] # для записи индексов товаров, которые упакованы\n",
     "        # делаем текущим айтемом первую строку, добавляем её в текцщий список sku\n",
     "        item = df_cluster.iloc[:1]  \n",
@@ -5356,10 +5359,12 @@
     "        #Проверяем не один ли товар в ордере, если один, то предиктим, добавляем в словарь, и выходим из цикла\n",
     "        if df_cluster.shape[0] == 1:\n",
     "            dict_sku[' '.join(map(str, list_sku))] = predict\n",
+    "            list_answer.append(dict_sku)\n",
     "            break\n",
     "        #Проверяем не был ли товар крупногабаритным по упаковке, если был, то просто добавляем в словарь и дропаем его из датасета\n",
     "        if get_bool_list_ib_list(LIST_BIG_CARTON, predict):\n",
     "            dict_sku[' '.join(map(str, list_sku))] = predict\n",
+    "            list_answer.append(dict_sku)\n",
     "            df_cluster = df_cluster[df_cluster.index != 0]\n",
     "            df_cluster = df_cluster.reset_index(drop=True)\n",
     "            list_sku = []\n",
@@ -5397,6 +5402,7 @@
     "            old_item_for_pred = get_df_for_predict(old_item, tfidf, scaler_clasific, column_drop)\n",
     "            #После обхода добавляем в словарь очередной набор\n",
     "            dict_sku[' '.join(map(str, list_sku))] = get_fit_predict_list_n(ind, old_item_for_pred) \n",
+    "            list_answer.append(dict_sku)\n",
     "            list_sku = []"
    ]
   },
@@ -5410,33 +5416,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
-   "id": "fbe981ea",
+   "execution_count": null,
+   "id": "97d5c086",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'cf5e7e23f15b6f1f2cf562d54421df2f': ['NONPACK', 'STRETCH', 'YMW'],\n",
-       " '7f88115c2fcb08ec45843216a3f8766b': ['NONPACK', 'YMW', 'YMG'],\n",
-       " 'f67952d3c114cd1c96f99cff5f1ab74b f67952d3c114cd1c96f99cff5f1ab74b 9bc9efa4c735620cd13820a64fee10b5 6ff34ff7477d0a1b43ea2d81dfcb6fa9': ['YMF',\n",
-       "  'YMC',\n",
-       "  'YME'],\n",
-       " '9bc9efa4c735620cd13820a64fee10b5 9ae2ee1d488294794a8a553b54b136d7 36c524a241808e5bf7bc27e4d2dee52e': ['YMF',\n",
-       "  'YMG',\n",
-       "  'YMW'],\n",
-       " '0bdaa1fb0836b5c6e2b0f0a6458e11fc': ['YMX', 'MYB', 'MYC'],\n",
-       " 'f1a7b29b05b742b9f1b47aed3a6ef8cd': ['MYC', 'YMA', 'MYB'],\n",
-       " 'ff9a04886f13a9fb3f587be06de5bf58': ['STRETCH', 'MYE', 'NONPACK']}"
-      ]
-     },
-     "execution_count": 243,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dict_sku"
+    "list_answer"
    ]
   },
   {
